19990908-12:36 GMT+1 Antonio Linares <alinares@fivetech.com>
  * source/tools/debug.c
    + Added new function HB___GETLOCAL() to retrieve local variable containts.
    (see debug.c for GetLocal() use documentation).
  * source/debug/debugger.prg
    * First propotipe retrieving local variables values
    (still it is missing removing locals once a procedure is over.
     Editing is not implemented yet).

19990908-05:05 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/inkey.c
    - remove extra #define INCL_DOSPROCESS
    + add #define INCL_NOPMAPI
  * source/rtl/gtapi.c
    simplified hb_gtScroll() to a function call.
    The code from this function was moved to gt/gtdos.c hb_gt_scroll()
    I currently can't compile a dos version so need a tester!
  * source/rtl/gt/gtos2.c
    - remove #define INCL_KBD since no keyboard functions are used
    + add #define INCL_NOPMAPI since PMAPI is not needed.
  * source/rtl/gt/gtdos.c
    * active hb_gt_scroll source.
    needs test.
  * most of this reported by Chen Kedem <niki@actcom.co.il>

19990908-03:05 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gt/gtos2.c
    + hb_gt_scroll by Chen Kedem <niki@actcom.co.il>

19990908-08:24 GMT+1 Antonio Linares <alinares@fivetech.com>
  * makefile.b32
    * strfmt.c and strfmt.obj were missing.

19990908-08:09 GMT+1 Antonio Linares <alinares@fivetech.com>
  * rdd.b32
    * Fixed missing '\' on the C output file path.

19990908-01:33 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/environ.c
    corrected to work with msvc.
    The format passed to sprintf is now a variable.  Under Windows,
    the hb_osletter is actually the build number, and the default
    format was not printing it correctly.

19990908-00:05 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/environ.c
    ! Version 1.43 added Windows code to detect the Windows version, but
      it also replaced the DOS code to detect Windows with Windows code